--- a/third.html
+++ b/third.html
@@ -14,9 +14,9 @@
     <nav>
         <h2>Sivun navigointi</h2>
            <ul>
-            <li><a href="https://sampo30.github.io/Samponmaailma/">Sampon maailma</a></li>
-            <li><a href="https://sampo30.github.io/Samponmaailma/second.html">Vesinokkaeläin</a></li>
-            <li><a href="https://sampo30.github.io/Samponmaailma/third.html">Ai-ai</a></li>
+            <li><a href="index.html">Sampon maailma</a></li>
+                <li><a href="second.html">Vesinokkaeläin</a></li>
+                <li><a href="third.html">Ai-ai</a></li>
            </ul>
         <h2>Ulkoiset linkit</h2>
             <ul>
