--- a/index.html
+++ b/index.html
@@ -1,35 +1,59 @@
-<!doctype html>
-<html>
-  <head>
-  	<meta charset="utf-8" />
-    <title>Sampon maailma!</title>
-    <link rel="stylesheet" type="text/css" href="css/tyyli.css">
-  </head>
-  <body>
-  	
-    <header>
-  	<h1>Sampon maailma</h1>
-    </header>
-    
-    <section>
-        <h2>Hejsan allihopa!</h2>
-        <nav>
-          <h2>Sivun navigointi</h2>
-               <ul>
-                <li><a href="index.html">Sampon maailma</a></li>
-                <li><a href="second.html">Vesinokkaeläin</a></li>
-                <li><a href="third.html">Ai-ai</a></li>
-               </ul>  
-        </nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Sampo maailma!</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+<body>
 
-      <article>
-      <h2>Mitä täällä on?</h2>
-      <p>No sitä en tiedä edes minä vielä.</p>
-      </article>
-    </section>
- <footer>
- 	<img src="https://cdn.pixabay.com/photo/2016/05/20/21/57/football-1406106_1280.jpg" alt="Liekehtivä pallo">
- </footer>
+<header class="border-fluid bg-dark">
+		<div class="logo text-danger">
+			<span>Sampon maailma!</span>
+		</div>
+		<ul class="nav">
+			<li class="nav-item">
+				<a class="nav-link active" href="index.html">Etusivu</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="second.html">Vesinokkaeläin</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="third.html">Ai-Ai</a>
+			</li>
+		</ul>
+	</header>
+
+<div class="bg-dark text-danger p-5 text-center">
+  <h1>Sampon maailma!</h1>
+  <p>Hejsan allihopa!</p> 
+</div>
+
+<div class="container-fluid bg-dark ">
+	<div class="row">
+	<img src="https://cdn.pixabay.com/photo/2016/05/20/21/57/football-1406106_1280.jpg" alt="Liekehtivä pallo">
+    </div>
+</div>
+
+
+
+<div class="container-fluid bg-dark text-danger">
+  <div class="row">
+    <div class="col-sm-6" href="second.html">
+      <h2>Vesinokkaeläin</h2>
+      <p>Vesinokkaeläin on hauska eläin Australiasta.</p>
+    </div>
+    <div class="col-sm-6" href="third.html">
+      <h2>Ai-Ai</h2>
+      <p>Ai-Ai on öisin liikkuva puoliapina Madagaskarilta.</p>
+    </div>
     
-  </body>
+  </div>
+</div>
+
+<div
+
+</body>
 </html>
