--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@
 
 <div class="container-fluid bg-dark text-danger">
   <div class="row">
-    <div class="col-sm-6" href="second.html">
-      <h2>Vesinokkaeläin</h2>
+    <div class="col-sm-6">
+      <h2>
+      <a href="second.html" class="text-danger">Vesinokkaeläin</a>
+      </h2>
       <p>Vesinokkaeläin on hauska eläin Australiasta.</p>
     </div>
     <div class="col-sm-6" href="third.html">
-      <h2>Ai-Ai</h2>
+      <h2>
+      <a href="third.html" class="text-danger">Ai-Ai</a>
+      </h2>
       <p>Ai-Ai on öisin liikkuva puoliapina Madagaskarilta.</p>
     </div>
     
