--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </h2>
       <p>Vesinokkaeläin on hauska eläin Australiasta.</p>
     </div>
-    <div class="col-sm-6" href="third.html">
+    <div class="col-sm-6">
       <h2>
       <a href="third.html" class="text-danger">Ai-Ai</a>
       </h2>
@@ -56,8 +56,6 @@
     
   </div>
 </div>
-
-<div
 
 </body>
 </html>
