--- a/second.html
+++ b/second.html
@@ -39,7 +39,7 @@
 	</header>
 	<main class="bg-dark">
 		<div class="container bg-dark text-danger">
-			<h1 class="center">Vesinokkaeläin</h1>
+			<h1 class="text-center">Vesinokkaeläin</h1>
 			<div class="row">
 				<div class="col">
 						<img src="https://cdn.pixabay.com/photo/2013/07/12/18/34/platypus-153496_1280.png" alt="Vesinokkaeläin" width="1000" height="300">
