--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
     
   </div>
 </div>
-
+<footer>
+  <div class="border full-width center">
+    <p>hullu@hullut.fi</p>
+  </div>
+</footer>
 </body>
 </html>
