--- a/third.html
+++ b/third.html
@@ -39,10 +39,10 @@
 	</header>
 	<main class="bg-dark">
 		<div class="container bg-dark text-danger">
-			<h1 class="center">Ai-Ai</h1>
+			<h1 class="text-center">Ai-Ai</h1>
 			<div class="row">
 				<div class="col">
-						<img class="h-50" src="https://live.staticflickr.com/4423/36875553441_2b02814476_b.jpg" alt="Ai-ai">
+						<img src="https://live.staticflickr.com/4423/36875553441_2b02814476_b.jpg" alt="Ai-ai" width="1000" height="400">
 				</div>
 			</div>
          </div>
