--- a/second.html
+++ b/second.html
@@ -51,12 +51,12 @@
 					<p>Vesinokkaeläin (Ornithorhynchus anatinus) on pienikokoinen nisäkäslaji, jota esiintyy Kaakkois-Australiassa ja Tasmaniassa.						</p>
                     </div>
                 <div class="col-md-6">
-                	<img class="img-thumbnail" src="https://cdn.pixabay.com/photo/2018/10/21/05/15/platypus-3762257_1280.jpg" alt="Vesinokkaeläin ui.">
+                	<img src="https://cdn.pixabay.com/photo/2018/10/21/05/15/platypus-3762257_1280.jpg" alt="Vesinokkaeläin ui. width="700" height="400"">
 					
                 </div>
             <div class="row">
             	<div class="col-md-6">
-					<img class="img-thumbnail" src="https://www.publicdomainpictures.net/pictures/190000/velka/platypus.jpg" alt="Musta vesinokkaeläin.">
+					<img src="https://www.publicdomainpictures.net/pictures/190000/velka/platypus.jpg" alt="Musta vesinokkaeläin." width="500" height="400">
                     </div>
                 <div class="col-md-6">
 					<p>Muniva, myrkyllinen, räpyläjalkainen ja ulkomuodoltaan ankannokkaiseksi sekä majavahäntäiseksi kuvailtu nisäkäs on hämmentänyt eurooppalaisia eläintieteilijöitä, joista monet ensi kohtaamisella luulivat sitä hyvin suunnitelluksi huijaukseksi. Se on yksi harvoista myrkyllisistä 							nisäkkäistä: vesinokkaeläinuroksella on takajalassaan kannus, joka levittää ihmiselle kovaa kipua aiheuttavaa myrkkyä. Vesinokkaeläin on ainutlaatuisten ominaisuuksiensa vuoksi tärkeä evoluutiobiologian tutkimuskohde ja Australian helposti tunnistettava symboli. Sitä on käytetty 						useiden kansallisten tapahtumien maskottina, ja se on kuvattuna Australian 20 sentin kolikon kääntöpuolelle.</p>
@@ -78,4 +78,3 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   </body>
 </html>
-
