--- a/third.html
+++ b/third.html
@@ -51,12 +51,12 @@
 					<p>Ai-ai eli sormieläin (Daubentonia madagascariensis) on Madagaskarin itärannikon sademetsissä elävä puoliapina ja sormieläinten heimon (Daubentoniidae) ainoa laji. Sen läheisimpiä sukulaisia ovat lorit ja makit. Ai-ai on kotikissan kokoinen, suurisilmäinen ja -korvainen yöeläin, jolla on tuuhea turkki ja pitkä häntä. Sen sormet ovat pitkät ja hoikat. Kapean keskisormensa avulla se kaivelee puissa eläviä toukkia, toisinaan se syö hedelmiäkin. Eläimen varpaat ovat melkein yhtä pitkät ja hoikat kuin sormet, ja niissä on käyrät koukkukynnet (paitsi isossa varpaassa, jonka kynsi on litteä kuten peukalon).						</p>
                     </div>
                 <div class="col-md-6">
-                	<img src="https://upload.wikimedia.org/wikipedia/commons/a/a2/Wild_aye_aye.jpg" alt="Ai-Ai" width="600" height="400">
+                	<img src="https://upload.wikimedia.org/wikipedia/commons/a/a2/Wild_aye_aye.jpg" alt="Ai-Ai" width=100% height="400">
 					
                 </div>
             <div class="row">
             	<div class="col-md-6">
-					<img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Aye-aye_at_night_in_the_wild_in_Madagascar.jpg" alt="Musta vesinokkaeläin." width="500" height="500">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Aye-aye_at_night_in_the_wild_in_Madagascar.jpg" alt="Musta vesinokkaeläin." width=100% height="500">
                     </div>
                 <div class="col-md-6">
 					<p>1900-luvun alkupuolella ai-ain luultiin kuolleen sukupuuttoon, kunnes yksi yksilö havaittiin vuonna 1957. Harvoin näyttäytyvä ja yöaktiivinen laji saattaa silti olla yksi Madagaskarin yleisimmistä puoliapinoista.
